reviewed by emiller fixes ZEN-13282 make sure white text on dialogs are visible

--- a/Products/ZenUI3/browser/resources/sass/xtheme-zenoss.scss
+++ b/Products/ZenUI3/browser/resources/sass/xtheme-zenoss.scss
@@ -229,3 +229,6 @@ $include-missing-images: true;
   margin-top: 5px !important;
   padding-left: 30px !important;
 }
+.x-window-body .x-panel-body td {
+  color: black;
+}
